# py-ai

./: .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
ai_ws/: agent.py  dependencies.py  main.py  services.py  tools.py
alembic/: env.py
alembic/versions/: 70940d93491c_create_conversation_metadata_table.py
mcp_ws/: dto.py  server.py
src/ai/: agent_manager.py  prompts.py
src/ai/agents/: base.py  chat_agent.py
src/ai/tools/: base.py  mcp_tools.py  search_tools.py
src/api/: app.py  db.py  dependencies.py  exceptions.py  migrations.py
src/api/routes/: chat.py  mcp.py
src/api/services/: chat_service.py  chat_title_service.py
src/config/: config_utils.py  logging_config.py  settings.py
src/mcp/: server.py
src/mcp/models/: weather.py
src/mcp/services/: weather_service.py
src/streamlit_app/: app.py
src/templates/: index.html
templates/: index.html
