[tool.poetry]
name = "py-ai"
version = "0.1.0"
description = ""
authors = ["arthur.hakobyan@live.com"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.116.1"
uvicorn = { extras = ["standard"], version = "0.35.0" }
langchain = "0.3.27"
langgraph = "0.6.7"
langchain-google-genai = "2.1.10"
python-dotenv = "1.1.1"
langchain-tavily = "0.2.11"
jinja2 = "3.1.6"
langchain-community = "0.3.29"
pydantic = "^2.11.7"
mcp = "^1.13.1"
langchain-mcp-adapters = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"