[tool.poetry]
name = "py-ai"
version = "0.2.0"
description = "AI-powered chat API with MCP integration"
authors = ["arthur.hakobyan@live.com"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.116.1"
uvicorn = { extras = ["standard"], version = "0.35.0" }
langchain = "0.3.27"
langgraph = "0.6.7"
langchain-google-genai = "2.1.10"
python-dotenv = "1.1.1"
langchain-tavily = "0.2.11"
langchain-community = "0.3.29"
pydantic = "2.11.9"
pydantic-settings = "2.10.1"
mcp = "1.14.0"
langchain-mcp-adapters = "0.1.9"
httpx = "0.28.1"
fastmcp = "2.12.3"
langgraph-checkpoint-postgres = "2.0.23"
langgraph-checkpoint = "2.1.1"
psycopg = { extras = ["binary", "pool"], version = "3.2.10" }
psycopg-pool = "3.2.6"
psycopg2-pool = "1.2"
streamlit = "1.49.1"
requests = "2.32.5"
alembic = "1.16.5"
greenlet = "^3.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.2.0"
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.3.0"
mypy = "1.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true